css/parser/tests/errors/rome/invalid/media/ratio/output.stderr
error: Expected Declaration value
 --> $DIR/tests/errors/rome/invalid/media/ratio/input.css:1:26
  |
1 | @media (aspect-ratio: 12/) {}
  |                          ^

